更新配置文件，新增响应式样式和动画效果，优化语言切换组件和移动端目录功能，提升用户体验和界面美观性。

--- a/frontend/i18n/locales/en.json
+++ b/frontend/i18n/locales/en.json
@@ -17,5 +17,8 @@
     "title": "Table of Contents",
     "expand": "Expand",
     "collapse": "Collapse"
+  },
+  "footer": {
+    "rights": "All Rights Reserved"
   }
 } 
