更新导航组件，新增外部链接支持，优化语言切换，更新多语言文本，提升用户体验和可读性。

--- a/frontend/i18n/locales/ar.json
+++ b/frontend/i18n/locales/ar.json
@@ -1,8 +1,8 @@
 {
   "nav": {
     "home": "الرئيسية",
-    "guide": "الدليل",
-    "tools": "الأدوات"
+    "about": "عني",
+    "github": "GitHub"
   },
   "common": {
     "language": "اللغة",
