--- a/frontend/i18n/locales/en.json
+++ b/frontend/i18n/locales/en.json
@@ -1,8 +1,8 @@
 {
   "nav": {
     "home": "Home",
-    "guide": "Guide",
-    "tools": "Tools"
+    "about": "About Me",
+    "github": "GitHub"
   },
   "common": {
     "language": "Language",
