--- a/frontend/i18n/locales/de.json
+++ b/frontend/i18n/locales/de.json
@@ -1,8 +1,8 @@
 {
   "nav": {
     "home": "Startseite",
-    "guide": "Anleitung",
-    "tools": "Werkzeuge"
+    "about": "Über mich",
+    "github": "GitHub"
   },
   "common": {
     "language": "Sprache",
