更新页面元信息，新增多语言支持的 SEO 相关 meta 标签，包括标题、描述和关键词，提升网站的搜索引擎优化效果和用户体验。

--- a/frontend/i18n/locales/ar.json
+++ b/frontend/i18n/locales/ar.json
@@ -1,4 +1,9 @@
 {
+  "meta": {
+    "title": "SimpleSEO - دليل SEO بسيط | Simple SEO Guide",
+    "description": "دليل SEO بسيط، 10 دقائق للبدء، يساعدك في الحصول على المزيد من الزيارات | Simple SEO Guide, 10 minutes to get started, help you get more traffic",
+    "keywords": "SEO، كيفية القيام بـ SEO، كيفية تحسين SEO، تحسين SEO، تحسين محركات البحث، تحسين المواقع | SEO, how to do SEO, how to improve SEO, SEO optimization, search engine optimization, website optimization"
+  },
   "nav": {
     "home": "الرئيسية",
     "about": "عني",
