--- a/frontend/i18n/locales/bn.json
+++ b/frontend/i18n/locales/bn.json
@@ -20,5 +20,10 @@
   },
   "footer": {
     "rights": "সর্বস্বত্ব সংরক্ষিত"
+  },
+  "meta": {
+    "title": "SimpleSEO - সহজ SEO গাইড | Simple SEO Guide",
+    "description": "সহজ SEO গাইড, 10 মিনিটে শুরু করুন, আপনাকে আরও ট্রাফিক পেতে সাহায্য করে | Simple SEO Guide, 10 minutes to get started, help you get more traffic",
+    "keywords": "SEO, কিভাবে SEO করবেন, কিভাবে SEO উন্নত করবেন, SEO অপ্টিমাইজেশন, সার্চ ইঞ্জিন অপ্টিমাইজেশন, ওয়েবসাইট অপ্টিমাইজেশন | SEO, how to do SEO, how to improve SEO, SEO optimization, search engine optimization, website optimization"
   }
 } 
