--- a/frontend/i18n/locales/de.json
+++ b/frontend/i18n/locales/de.json
@@ -20,5 +20,10 @@
   },
   "footer": {
     "rights": "Alle Rechte vorbehalten"
+  },
+  "meta": {
+    "title": "SimpleSEO - Einfacher SEO-Leitfaden | Simple SEO Guide",
+    "description": "Einfacher SEO-Leitfaden, in 10 Minuten starten, hilft Ihnen, mehr Traffic zu erhalten | Simple SEO Guide, 10 minutes to get started, help you get more traffic",
+    "keywords": "SEO, wie man SEO macht, wie man SEO verbessert, SEO-Optimierung, Suchmaschinenoptimierung, Website-Optimierung | SEO, how to do SEO, how to improve SEO, SEO optimization, search engine optimization, website optimization"
   }
 } 
