--- a/frontend/i18n/locales/en.json
+++ b/frontend/i18n/locales/en.json
@@ -20,5 +20,10 @@
   },
   "footer": {
     "rights": "All Rights Reserved"
+  },
+  "meta": {
+    "title": "SimpleSEO - Simple SEO Guide",
+    "description": "Simple SEO Guide, 10 minutes to get started, help you get more traffic",
+    "keywords": "SEO, how to do SEO, how to improve SEO, SEO optimization, search engine optimization, website optimization"
   }
 } 
