--- a/frontend/i18n/locales/es.json
+++ b/frontend/i18n/locales/es.json
@@ -20,5 +20,10 @@
   },
   "footer": {
     "rights": "Todos los derechos reservados"
+  },
+  "meta": {
+    "title": "SimpleSEO - Guía SEO Simple | Simple SEO Guide",
+    "description": "Guía SEO Simple, 10 minutos para empezar, te ayuda a obtener más tráfico | Simple SEO Guide, 10 minutes to get started, help you get more traffic",
+    "keywords": "SEO, cómo hacer SEO, cómo mejorar SEO, optimización SEO, optimización de motores de búsqueda, optimización de sitios web | SEO, how to do SEO, how to improve SEO, SEO optimization, search engine optimization, website optimization"
   }
 } 
