--- a/frontend/i18n/locales/fr.json
+++ b/frontend/i18n/locales/fr.json
@@ -20,5 +20,10 @@
   },
   "footer": {
     "rights": "Tous droits réservés"
+  },
+  "meta": {
+    "title": "SimpleSEO - Guide SEO Simple | Simple SEO Guide",
+    "description": "Guide SEO Simple, 10 minutes pour démarrer, vous aide à obtenir plus de trafic | Simple SEO Guide, 10 minutes to get started, help you get more traffic",
+    "keywords": "SEO, comment faire du SEO, comment améliorer le SEO, optimisation SEO, optimisation pour les moteurs de recherche, optimisation de site web | SEO, how to do SEO, how to improve SEO, SEO optimization, search engine optimization, website optimization"
   }
 } 
