--- a/frontend/i18n/locales/hi.json
+++ b/frontend/i18n/locales/hi.json
@@ -20,5 +20,10 @@
   },
   "footer": {
     "rights": "सर्वाधिकार सुरक्षित"
+  },
+  "meta": {
+    "title": "SimpleSEO - सरल SEO गाइड | Simple SEO Guide",
+    "description": "सरल SEO गाइड, 10 मिनट में शुरू करें, अधिक ट्रैफिक प्राप्त करने में आपकी मदद करता है | Simple SEO Guide, 10 minutes to get started, help you get more traffic",
+    "keywords": "SEO, SEO कैसे करें, SEO को कैसे बेहतर बनाएं, SEO अनुकूलन, खोज इंजन अनुकूलन, वेबसाइट अनुकूलन | SEO, how to do SEO, how to improve SEO, SEO optimization, search engine optimization, website optimization"
   }
 } 
