--- a/frontend/i18n/locales/id.json
+++ b/frontend/i18n/locales/id.json
@@ -20,5 +20,10 @@
   },
   "footer": {
     "rights": "Hak Cipta Dilindungi"
+  },
+  "meta": {
+    "title": "SimpleSEO - Panduan SEO Sederhana | Simple SEO Guide",
+    "description": "Panduan SEO Sederhana, 10 menit untuk memulai, membantu Anda mendapatkan lebih banyak lalu lintas | Simple SEO Guide, 10 minutes to get started, help you get more traffic",
+    "keywords": "SEO, cara melakukan SEO, cara meningkatkan SEO, optimasi SEO, optimasi mesin pencari, optimasi situs web | SEO, how to do SEO, how to improve SEO, SEO optimization, search engine optimization, website optimization"
   }
 } 
