--- a/frontend/i18n/locales/it.json
+++ b/frontend/i18n/locales/it.json
@@ -20,5 +20,10 @@
   },
   "footer": {
     "rights": "Tutti i diritti riservati"
+  },
+  "meta": {
+    "title": "SimpleSEO - Guida SEO Semplice | Simple SEO Guide",
+    "description": "Guida SEO Semplice, 10 minuti per iniziare, ti aiuta a ottenere più traffico | Simple SEO Guide, 10 minutes to get started, help you get more traffic",
+    "keywords": "SEO, come fare SEO, come migliorare il SEO, ottimizzazione SEO, ottimizzazione per i motori di ricerca, ottimizzazione siti web | SEO, how to do SEO, how to improve SEO, SEO optimization, search engine optimization, website optimization"
   }
 } 
