--- a/frontend/i18n/locales/ja.json
+++ b/frontend/i18n/locales/ja.json
@@ -20,5 +20,10 @@
   },
   "footer": {
     "rights": "全著作権所有"
+  },
+  "meta": {
+    "title": "SimpleSEO - シンプルSEOガイド | Simple SEO Guide",
+    "description": "シンプルSEOガイド、10分で始められ、より多くのトラフィックを獲得するのに役立ちます | Simple SEO Guide, 10 minutes to get started, help you get more traffic",
+    "keywords": "SEO, SEOの方法, SEOを改善する方法, SEO最適化, 検索エンジン最適化, ウェブサイト最適化 | SEO, how to do SEO, how to improve SEO, SEO optimization, search engine optimization, website optimization"
   }
 } 
