--- a/frontend/i18n/locales/pt.json
+++ b/frontend/i18n/locales/pt.json
@@ -20,5 +20,10 @@
   },
   "footer": {
     "rights": "Todos os direitos reservados"
+  },
+  "meta": {
+    "title": "SimpleSEO - Guia SEO Simples | Simple SEO Guide",
+    "description": "Guia SEO Simples, 10 minutos para começar, ajuda você a obter mais tráfego | Simple SEO Guide, 10 minutes to get started, help you get more traffic",
+    "keywords": "SEO, como fazer SEO, como melhorar SEO, otimização de SEO, otimização de motores de busca, otimização de sites | SEO, how to do SEO, how to improve SEO, SEO optimization, search engine optimization, website optimization"
   }
 } 
