--- a/frontend/i18n/locales/ru.json
+++ b/frontend/i18n/locales/ru.json
@@ -20,5 +20,10 @@
   },
   "footer": {
     "rights": "Все права защищены"
+  },
+  "meta": {
+    "title": "SimpleSEO - Простое руководство по SEO | Simple SEO Guide",
+    "description": "Простое руководство по SEO, 10 минут на освоение, поможет вам получить больше трафика | Simple SEO Guide, 10 minutes to get started, help you get more traffic",
+    "keywords": "SEO, как делать SEO, как улучшить SEO, оптимизация SEO, поисковая оптимизация, оптимизация сайта | SEO, how to do SEO, how to improve SEO, SEO optimization, search engine optimization, website optimization"
   }
 } 
