--- a/frontend/i18n/locales/sw.json
+++ b/frontend/i18n/locales/sw.json
@@ -20,5 +20,10 @@
   },
   "footer": {
     "rights": "Haki zote zimehifadhiwa"
+  },
+  "meta": {
+    "title": "SimpleSEO - Mwongozo Rahisi wa SEO | Simple SEO Guide",
+    "description": "Mwongozo Rahisi wa SEO, dakika 10 kuanza, inakusaidia kupata trafiki zaidi | Simple SEO Guide, 10 minutes to get started, help you get more traffic",
+    "keywords": "SEO, jinsi ya kufanya SEO, jinsi ya kuboresha SEO, uboreshaji wa SEO, uboreshaji wa injini ya utafutaji, uboreshaji wa tovuti | SEO, how to do SEO, how to improve SEO, SEO optimization, search engine optimization, website optimization"
   }
 } 
