--- a/frontend/i18n/locales/th.json
+++ b/frontend/i18n/locales/th.json
@@ -20,5 +20,10 @@
   },
   "footer": {
     "rights": "สงวนลิขสิทธิ์"
+  },
+  "meta": {
+    "title": "SimpleSEO - คู่มือ SEO แบบง่าย | Simple SEO Guide",
+    "description": "คู่มือ SEO แบบง่าย, เริ่มต้นใช้งานใน 10 นาที, ช่วยให้คุณได้รับทราฟฟิกมากขึ้น | Simple SEO Guide, 10 minutes to get started, help you get more traffic",
+    "keywords": "SEO, วิธีทำ SEO, วิธีปรับปรุง SEO, การปรับแต่ง SEO, การปรับแต่งเพื่อเครื่องมือค้นหา, การปรับแต่งเว็บไซต์ | SEO, how to do SEO, how to improve SEO, SEO optimization, search engine optimization, website optimization"
   }
 } 
