--- a/frontend/i18n/locales/tl.json
+++ b/frontend/i18n/locales/tl.json
@@ -20,5 +20,10 @@
   },
   "footer": {
     "rights": "Lahat ng karapatan ay nakalaan"
+  },
+  "meta": {
+    "title": "SimpleSEO - Simpleng Gabay sa SEO | Simple SEO Guide",
+    "description": "Simpleng Gabay sa SEO, 10 minuto para magsimula, tumutulong sa iyo na makakuha ng mas maraming traffic | Simple SEO Guide, 10 minutes to get started, help you get more traffic",
+    "keywords": "SEO, paano gumawa ng SEO, paano pagbutihin ang SEO, pag-optimize ng SEO, pag-optimize ng search engine, pag-optimize ng website | SEO, how to do SEO, how to improve SEO, SEO optimization, search engine optimization, website optimization"
   }
 } 
