--- a/frontend/i18n/locales/tr.json
+++ b/frontend/i18n/locales/tr.json
@@ -20,5 +20,10 @@
   },
   "footer": {
     "rights": "Tüm hakları saklıdır"
+  },
+  "meta": {
+    "title": "SimpleSEO - Basit SEO Rehberi | Simple SEO Guide",
+    "description": "Basit SEO Rehberi, başlamak için 10 dakika, daha fazla trafik almanıza yardımcı olur | Simple SEO Guide, 10 minutes to get started, help you get more traffic",
+    "keywords": "SEO, SEO nasıl yapılır, SEO nasıl geliştirilir, SEO optimizasyonu, arama motoru optimizasyonu, web sitesi optimizasyonu | SEO, how to do SEO, how to improve SEO, SEO optimization, search engine optimization, website optimization"
   }
 } 
