--- a/frontend/i18n/locales/vi.json
+++ b/frontend/i18n/locales/vi.json
@@ -20,5 +20,10 @@
   },
   "footer": {
     "rights": "Bản quyền đã được bảo hộ"
+  },
+  "meta": {
+    "title": "SimpleSEO - Hướng dẫn SEO Đơn giản | Simple SEO Guide",
+    "description": "Hướng dẫn SEO Đơn giản, 10 phút để bắt đầu, giúp bạn nhận được nhiều lưu lượng truy cập hơn | Simple SEO Guide, 10 minutes to get started, help you get more traffic",
+    "keywords": "SEO, cách làm SEO, cách cải thiện SEO, tối ưu hóa SEO, tối ưu hóa công cụ tìm kiếm, tối ưu hóa trang web | SEO, how to do SEO, how to improve SEO, SEO optimization, search engine optimization, website optimization"
   }
 } 
